--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -50,9 +50,6 @@
     <Compile Include="Backup.cs" />
     <Compile Include="CommandEventArgs.cs" />
     <Compile Include="CommandParser.cs" />
-    <Compile Include="Interfaces\IMapper.cs" />
-    <Compile Include="Interfaces\IScheduleTask.cs" />
-    <Compile Include="Interfaces\IServer.cs" />
     <Compile Include="Mappers\MapManager.cs" />
     <Compile Include="EMMServerMessage.cs" />
     <Compile Include="SavedUser.cs" />
@@ -65,7 +62,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EMMServer.cs" />
     <Compile Include="Settings\MCServerProperties.cs" />
-    <Compile Include="ServerMessageEventArgs.cs" />
     <Compile Include="Settings\SettingsFile.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -73,6 +69,10 @@
     <None Include="Settings\sample.settings.conf" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{970B78FB-587F-48FD-89B5-222B448FE10B}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LibNbt\LibNbt.csproj">
       <Project>{4488498D-976D-4DA3-BF72-109531AF0488}</Project>
       <Name>LibNbt</Name>
