--- a/source/Solution/EMM/Settings/sample.settings.conf
+++ b/source/Solution/EMM/Settings/sample.settings.conf
@@ -80,7 +80,7 @@
 
 
 ### ============================================================================
-### Minecraft Overviewer options
+### PLUGIN Minecraft Overviewer options
 ### ============================================================================
 
 ### Whether or not to use the MinecraftOverviewer map output options.
