Refactor and cleanup

--- a/Deploy/EMMServer/sample.settings.conf
+++ b/Deploy/EMMServer/sample.settings.conf
@@ -2,38 +2,6 @@
 ### Server options
 ### ============================================================================
 
-### ServerListenIP
-### The ip address that the server manager should listen on for client
-### connections.
-### Useful for servers with multiple IP addresses, set to 
-###   "any" to listen on all addresses, 
-###   an IP address to listen just on that one address
-###   "none" to disable the remote listener
-#ServerListenIp=none
-
-### ServerListenPort
-### The port that the server manager should listen on for client connections.
-#ServerListenPort=8221
-
-### ServerUsername
-### The username for connecting to the server.
-#ServerUsername=changeme
-
-### ServerPassword
-### The password for connecting to the server.
-#ServerPassword=changeme
-
-### ClientConnectIp
-### When using the emmclient, this is the address of the server manager to
-### connect to.
-### Can be an IP address a hostname, or a valid fully-qualified domain-name.
-#ClientConnectIp=localhost
-
-### ClientConnectPort
-### When using the emmclient, this is the port to connect to at ClientConnectIp
-### to talk to the emmserver.
-#ClientConnectPort=8221
-
 ### CacheRoot
 ### The location to use for temporary (but persistent) cache files.  This
 ### includes the Overviewer map staging files, so deleting these will greatly
@@ -112,7 +80,7 @@
 
 
 ### ============================================================================
-### Minecraft Overviewer options
+### PLUGIN Minecraft Overviewer options
 ### ============================================================================
 
 ### Whether or not to use the MinecraftOverviewer map output options.
