--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -79,7 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Ionic.Zip.Reduced.dll" />
-    <Content Include="Ionic.Zip.Reduced.txt">
+    <Content Include="Ionic.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="messages.xml">
