--- a/source/Solution/Plugin.AlphaVespucci/Plugin.AlphaVespucci.csproj
+++ b/source/Solution/Plugin.AlphaVespucci/Plugin.AlphaVespucci.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -41,7 +42,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AlphaVespucci.cs" />
-    <Compile Include="AlphaVespucciMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
