--- a/source/Solution/Plugin.AlphaVespucci/Plugin.AlphaVespucci.csproj
+++ b/source/Solution/Plugin.AlphaVespucci/Plugin.AlphaVespucci.csproj
@@ -51,6 +51,11 @@
       <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Plugin.AlphaVespucci.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
