Updated documentation for plugins

--- a/source/Solution/Plugin.AlphaVespucci/Plugin.AlphaVespucci.conf
+++ b/source/Solution/Plugin.AlphaVespucci/Plugin.AlphaVespucci.conf
@@ -1,3 +1,12 @@
+### Commands
+###
+### maps av         Render the 'main' map
+###
+### maps av extra   Renders 7 additional maps
+###                 nightmap, caves, surfacecaves, resource-diamond,
+###                 resource-redstone, resource-torch
+
+
 ### ExePath
 ### The location of the AlphaVespucci mapper executable, relative to EMM or full
 ### path.
@@ -10,3 +19,16 @@
 ### ExePath=.\AlphaVespucci\AlphaVespucci.exe
 ###
 #ExePath=.\AlphaVespucci\AlphaVespucci.exe
+
+
+### OutputPath
+### The location to save generated maps, relative to EMM or full path.
+###
+### Examples:
+### OutputPath=.\Maps\av
+### OutputPath=C:\Tools\Mappers\Maps
+###
+### Default:
+### OutputPath=.\Maps\av
+###
+#OutputPath=.\Maps\av
