--- a/source/Solution/Plugin.Overviewer/Plugin.Overviewer.conf
+++ b/source/Solution/Plugin.Overviewer/Plugin.Overviewer.conf
@@ -10,3 +10,16 @@
 ### ExePath=.\Overviewer\gmap.exe
 ###
 #ExePath=.\Overviewer\gmap.exe
+
+
+### OutputPath
+### The location to save generated maps, relative to EMM or full path.
+###
+### Examples:
+### OutputPath=.\Maps\overviewer
+### OutputPath=C:\Tools\Mappers\Maps
+###
+### Default:
+### OutputPath=.\Maps\overviewer
+###
+#OutputPath=.\Maps\overviewer
