Modification of the command syntax

--- a/source/Solution/Plugin.Overviewer/Plugin.Overviewer.conf
+++ b/source/Solution/Plugin.Overviewer/Plugin.Overviewer.conf
@@ -1,3 +1,8 @@
+### Commands
+###
+### maps overviewer   Render the Overviewer map
+
+
 ### ExePath
 ### The location of the Overviewer mapper executable, relative to EMM or full
 ### path.
