--- a/source/Solution/Tests/Tests.csproj
+++ b/source/Solution/Tests/Tests.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Plugin.AlphaVespucciTests.cs" />
     <Compile Include="ScheduleManagerTests.cs" />
     <Compile Include="ScheduleTaskTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -68,6 +69,10 @@
     <ProjectReference Include="..\MinecraftSimulator\MinecraftSimulator.csproj">
       <Project>{0D7FFBF5-9340-47AE-B8DC-73131D35DBB2}</Project>
       <Name>MinecraftSimulator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Plugin.AlphaVespucci\Plugin.AlphaVespucci.csproj">
+      <Project>{F63A86B8-6630-416D-A050-AB56A48D5348}</Project>
+      <Name>Plugin.AlphaVespucci</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
