Updated build script, and bumped version to 1.1

--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -81,9 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Ionic.Zip.Reduced.dll" />
-    <Content Include="Ionic.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="Ionic.txt" />
     <Content Include="messages.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
