--- a/source/Solution/Tests/Tests.csproj
+++ b/source/Solution/Tests/Tests.csproj
@@ -41,7 +41,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\Moq.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.5.8.10295, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.5.9.10348, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -73,6 +76,7 @@
     <ProjectReference Include="..\Plugin.AlphaVespucci\Plugin.AlphaVespucci.csproj">
       <Project>{F63A86B8-6630-416D-A050-AB56A48D5348}</Project>
       <Name>Plugin.AlphaVespucci</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
