Added item get command

--- a/source/Solution/EMM/EMM.csproj
+++ b/source/Solution/EMM/EMM.csproj
@@ -84,6 +84,9 @@
   <ItemGroup>
     <Content Include="Ionic.Zip.Reduced.dll" />
     <Content Include="Ionic.txt" />
+    <Content Include="items.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="messages.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
