--- a/source/Solution/Plugin.c10t/Plugin.c10t.csproj
+++ b/source/Solution/Plugin.c10t/Plugin.c10t.csproj
@@ -47,6 +47,7 @@
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{970B78FB-587F-48FD-89B5-222B448FE10B}</Project>
       <Name>Interfaces</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
