--- a/source/Solution/EMM/app.config
+++ b/source/Solution/EMM/app.config
@@ -1,5 +1,10 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+  <configSections></configSections>
+  <startup>
+    <supportedRuntime version="v2.0.50727" />
+  </startup>
+  <connectionStrings>
+    <add name="EMMEntities" connectionString="metadata=res://*/Data.Model.csdl|res://*/Data.Model.ssdl|res://*/Data.Model.msl;provider=System.Data.SqlServerCe.3.5;provider connection string=&quot;Data Source=|DataDirectory|\EMM.sdf&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
