Various plugin changes

--- a/source/Solution/Plugin.c10t/Plugin.c10t.conf
+++ b/source/Solution/Plugin.c10t/Plugin.c10t.conf
@@ -1,6 +1,7 @@
 ### Commands
 ###
-### maps c10t   Render the c10t map
+### maps c10t   Render the 'main' map
+###
 
 
 ### ExePath
@@ -28,3 +29,20 @@
 ### OutputPath=.\Maps\c10t
 ###
 #OutputPath=.\Maps\c10t
+
+
+### Main Render Parameters
+### Which parameters to pass to c10t for the 'main' map.
+### World, output and cache options are automatically added.
+### The following tags will be expanded:
+### {WORLD} = Full path to the world
+### {OUTPUTPATH} = Full path to the output path
+### {OUTPUTFILE} = Full path to the output file
+###
+### Valid options: any valid c10t parameters
+###
+### Default:
+### main.RenderParams=--isometric
+###
+#main.RenderParams=--isometric
+#main.SmallWidth=320
