--- a/source/Solution/Interfaces/Interfaces.csproj
+++ b/source/Solution/Interfaces/Interfaces.csproj
@@ -40,9 +40,9 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseClasses\Plugin.Command.cs" />
-    <Compile Include="Interfaces\IPluginCommand.cs" />
-    <Compile Include="Interfaces\IMapper.cs" />
+    <Compile Include="BaseClasses\CommandPlugin.cs" />
+    <Compile Include="Interfaces\ICommandPlugin.cs" />
+    <Compile Include="Interfaces\IMapperPlugin.cs" />
     <Compile Include="Interfaces\IPlugin.cs" />
     <Compile Include="Interfaces\IScheduleTask.cs" />
     <Compile Include="Interfaces\IServer.cs" />
@@ -53,7 +53,7 @@
     <Compile Include="Interfaces\IMCSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseClasses\Plugin.Mapper.cs" />
+    <Compile Include="BaseClasses\MapperPlugin.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
