--- a/source/Solution/Interfaces/Interfaces.csproj
+++ b/source/Solution/Interfaces/Interfaces.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Interfaces\IServer.cs" />
     <Compile Include="Interfaces\IServerSettings.cs" />
     <Compile Include="Interfaces\ISettings.cs" />
+    <Compile Include="Interfaces\IUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerMessageEventArgs.cs" />
     <Compile Include="Interfaces\IMCSettings.cs" />
