--- a/source/Solution/Server/Server.csproj
+++ b/source/Solution/Server/Server.csproj
@@ -80,6 +80,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Engine\Commands\Mappers\C10t.cs" />
+    <Compile Include="Engine\Commands\MapsCommand.cs" />
+    <Compile Include="UsersForm.xaml.cs">
+      <DependentUpon>UsersForm.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -94,9 +99,9 @@
     <Compile Include="Engine\Commands\Command.cs" />
     <Compile Include="Engine\Commands\GetCommand.cs" />
     <Compile Include="Engine\Data\EMMDataContext.designer.cs">
-      <DependentUpon>EMMDataContext.dbml</DependentUpon>
-      <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EMMDataContext.dbml</DependentUpon>
     </Compile>
     <Compile Include="Engine\EMMServer.cs" />
     <Compile Include="Engine\EMMServerMessage.cs" />
@@ -116,6 +121,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UsersForm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
