--- a/source/Solution/Server/app.config
+++ b/source/Solution/Server/app.config
@@ -1,5 +1,13 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="EnigmaMM.Properties.Settings.EMMConnectionString"
+      connectionString="Data Source=|DataDirectory|\EMM.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="EnigmaMM.Properties.Settings.LiveEMM" connectionString="Data Source=D:\Games\Minecraft\Server\EMM.sdf"
+      providerName="Microsoft.SqlServerCe.Client.3.5" />
+  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
